--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,3 @@
-<app-sidenavbar></app-sidenavbar>
+<!-- <app-landingpage></app-landingpage> -->
+<!-- <app-sidenavbar></app-sidenavbar> -->
+<router-outlet></router-outlet>
