--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,3 @@
-<app-header></app-header>
 
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
 
@@ -17,7 +16,7 @@
           <input required matInput placeholder="Password" name=Password [(ngModel)]="model.Password" >
         </mat-form-field>
       </mat-card-content>
-      <button [disabled]="loginForm.invalid" mat-stroked-button color="accent"  type="submit" class="btn-block">Log in</button>
+      <button  mat-stroked-button color="accent"  type="submit" class="btn-block">Log in</button>
     </form>
   </mat-card>
 </div>
