--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -7,10 +7,10 @@
 
 
             <div class="text-center">
-                <img src="http://ssl.gstatic.com/accounts/ui/avatar_2x.png" class="avatar img-circle img-thumbnail"
+                <img src="{{photoUrl}}" class="avatar img-circle img-thumbnail"
                     alt="avatar">
-                <h6>Upload a different photo...</h6>
-                <input type="file" class="text-center center-block file-upload">
+               <a href="#photo" ><h6>Upload a different photo</h6></a>
+                <!-- <input type="file" class="text-center center-block file-upload"> -->
             </div>
             <hr>
 
@@ -103,37 +103,11 @@
                             </div>
                         </div>
                     </mat-tab>
-                    <mat-tab label="Photos">
-                        <div class="container">
-                            <div class="row">
-                                <a href="https://unsplash.it/1200/768.jpg?image=251" data-toggle="lightbox"
-                                    data-gallery="gallery" class="col-md-4">
-                                    <img src="https://unsplash.it/600.jpg?image=251" class="img-fluid rounded">
-                                </a>
-                                <a href="https://unsplash.it/1200/768.jpg?image=252" data-toggle="lightbox"
-                                    data-gallery="gallery" class="col-md-4">
-                                    <img src="https://unsplash.it/600.jpg?image=252" class="img-fluid rounded">
-                                </a>
-                                <a href="https://unsplash.it/1200/768.jpg?image=253" data-toggle="lightbox"
-                                    data-gallery="gallery" class="col-md-4">
-                                    <img src="https://unsplash.it/600.jpg?image=253" class="img-fluid rounded">
-                                </a>
-                            </div>
-                            <div class="row">
-                                <a href="https://unsplash.it/1200/768.jpg?image=254" data-toggle="lightbox"
-                                    data-gallery="gallery" class="col-md-4">
-                                    <img src="https://unsplash.it/600.jpg?image=254" class="img-fluid rounded">
-                                </a>
-                                <a href="https://unsplash.it/1200/768.jpg?image=255" data-toggle="lightbox"
-                                    data-gallery="gallery" class="col-md-4">
-                                    <img src="https://unsplash.it/600.jpg?image=255" class="img-fluid rounded">
-                                </a>
-                                <a href="https://unsplash.it/1200/768.jpg?image=256" data-toggle="lightbox"
-                                    data-gallery="gallery" class="col-md-4">
-                                    <img src="https://unsplash.it/600.jpg?image=256" class="img-fluid rounded">
-                                </a>
-                            </div>
-                        </div>
+                    <mat-tab id="photo" label="Photos">
+                      <app-photo-editor [photos]="user.photos" 
+                      (getMemberPhotoChange)="updateMainPhotot($event)">
+
+                      </app-photo-editor>
 
                     </mat-tab>
                 </mat-tab-group>
