--- a/src/app/sidenavbar/sidenavbar.component.css
+++ b/src/app/sidenavbar/sidenavbar.component.css
@@ -39,4 +39,11 @@
     flex: 1 1 auto;
   }
 
+  img{
+    max-height: 40px;
+    border: 1px solid white;
+    display: inline;
+    max-width: 40px;
+    
+  }
  
