--- a/src/app/sidenavbar/sidenavbar.component.html
+++ b/src/app/sidenavbar/sidenavbar.component.html
@@ -19,12 +19,12 @@
             <button mat-menu-item>2</button>
         </mat-menu>
 
-
         <button mat-button  *ngIf="loggedIn()" [matMenuTriggerFor]="menu">{{authService.decodedToken.unique_name}} <mat-icon>keyboard_arrow_down</mat-icon></button>
         <mat-menu #menu="matMenu">
             <button mat-menu-item [routerLink]="['/edit']" routerLinkActive="router-link-active" >Edit</button>
             <button mat-menu-item (click)="logout()">Logout</button>
         </mat-menu>
+        <img *ngIf="loggedIn()" src="{{ photoUrl}}" [matMenuTriggerFor]="menu" >
 
     </mat-toolbar-row>
 </mat-toolbar>
