--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -7,7 +7,7 @@
 
 
             <div class="text-center">
-                <img src="{{photoUrl}}" class="avatar img-circle img-thumbnail"
+                <img src="{{photoUrl || '../assets/img/user.jpg'}}" class="avatar img-circle img-thumbnail"
                     alt="avatar">
                <a href="#photo" ><h6>Upload a different photo</h6></a>
                 <!-- <input type="file" class="text-center center-block file-upload"> -->
