--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,30 +1,126 @@
+<div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
+  <mat-card class="box">
+    <mat-card-header>
+      <mat-card-title>Register</mat-card-title>
+    </mat-card-header>
+
+    <form [formGroup]="registerForm" (ngSubmit)="register()" class="example-form">
+
+      <label id="example-radio-group-label">I am </label>
+      <mat-radio-group aria-label="Select an option" formControlName="gender">
+        <mat-radio-button value="male">Male</mat-radio-button>
+        <mat-radio-button value="female">Female</mat-radio-button>
+      </mat-radio-group>
 
 
-<div  class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
-    <mat-card class="box">
-      <mat-card-header>
-        <mat-card-title>Register</mat-card-title>
-      </mat-card-header>
-  
-      <form #registerForm="ngForm" (ngSubmit)="register()" class="example-form">
-  
-        <mat-card-content>
-          <mat-form-field class="example-full-width">
-            <input matInput  required [(ngModel)]="model.Name" name="Name" placeholder="Username">
-          </mat-form-field>
-  
-          <mat-form-field class="example-full-width">
-            <input matInput placeholder="Email">
-          </mat-form-field>
-  
-          <mat-form-field class="example-full-width">
-            <input matInput required [(ngModel)]="model.Password" name="Password" placeholder="Password">
-          </mat-form-field>
-  
-        </mat-card-content>
-  
-        <button mat-stroked-button color="accent" type="submit" class="btn-block">Register</button>
-  
-      </form>
-    </mat-card>
-  </div>
+      <mat-card-content>
+        <mat-form-field class="example-full-width ">
+          <mat-label>Name</mat-label>
+          <input matInput formControlName="name" placeholder="name">
+
+          <mat-error>
+            <div *ngIf="f.name.errors">
+              <span *ngIf="!f.name.valid && f.name.touched && f.name.errors.required"> Name
+                <strong>required</strong> </span>
+            </div>
+          </mat-error>
+
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width ">
+          <mat-label>Date of Birth</mat-label>
+          <input matInput [matDatepicker]="picker" formControlName="dateofbirth">
+          <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+          <mat-datepicker #picker></mat-datepicker>
+
+          <mat-error>
+            <div *ngIf="f.dateofbirth.errors">
+              <span *ngIf="!f.dateofbirth.valid && f.dateofbirth.touched && f.dateofbirth.errors.required">
+                date of birth <strong>required</strong> </span>
+            </div>
+          </mat-error>
+        </mat-form-field>
+
+
+        <mat-form-field class="example-full-width ">
+          <mat-label>Office Name</mat-label>
+          <input matInput formControlName="officename" placeholder="Office Name">
+
+          <mat-error>
+            <div *ngIf="f.officename.errors">
+              <span *ngIf="!f.officename.valid && f.officename.touched && f.officename.errors.required">
+                Office Name <strong>required</strong> </span>
+            </div>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width ">
+          <mat-label>Grade Pay</mat-label>
+          <input matInput formControlName="gradepay" placeholder=" Grade pay">
+
+          <mat-error>
+            <div *ngIf="f.gradepay.errors">
+              <span *ngIf="!f.gradepay.valid && f.gradepay.touched && f.gradepay.errors.required">
+                Grade Pay <strong>required</strong> </span>
+            </div>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width ">
+          <mat-label>Office City</mat-label>
+          <input matInput formControlName="office" placeholder=" office city">
+
+          <mat-error>
+            <div *ngIf="f.office.errors">
+              <span *ngIf="!f.office.valid && f.office.touched && f.office.errors.required">
+                office city <strong>required</strong> </span>
+            </div>
+          </mat-error>
+        </mat-form-field>
+
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Password</mat-label>
+          <input matInput formControlName="password" placeholder="Password">
+          <mat-error>
+            <div *ngIf="f.password.errors">
+              <span *ngIf="!f.password.valid && f.password.touched && f.password.errors.required"> password
+                <strong>required</strong> </span>
+              <span
+                *ngIf="!f.password.valid && f.password.touched && f.password.errors.minlength || f.password.errors.maxlength">
+                Password must be between 4 to 8characters </span>
+            </div>
+          </mat-error>
+        </mat-form-field>
+
+        <mat-form-field class="example-full-width">
+          <mat-label>Confirm Password</mat-label>
+          <input matInput formControlName="confirmpassword" placeholder="Confirm Password">
+          <mat-error>
+            <div *ngIf="f.confirmpassword.errors">
+              <span *ngIf="!f.confirmpassword.valid && f.confirmpassword.touched && f.confirmpassword.errors.required">
+                password <strong>required</strong> </span>
+              <span *ngIf="!f.confirmpassword.valid && f.confirmpassword.touched && f.confirmpassword.errors.mustMatch">
+                Password do not match </span>
+            </div>
+          </mat-error>
+
+        </mat-form-field>
+
+        <!-- <mat-form-field class="example-full-width">
+            <input matInput  formControlName="email" placeholder="Email">
+          </mat-form-field> -->
+
+      </mat-card-content>
+
+      <button mat-stroked-button color="accent" type="submit" class="btn-block">Register</button>
+      <!-- <button  class="btn btn-link" type="reset" (click)="onReset()">Reset</button> -->
+
+    </form>
+    <!-- <p> Form VAlue {{registerForm.value | json}}</p>
+    <p> Form Status {{registerForm.status | json}}</p> -->
+
+  </mat-card>
+
+
+</div>
