--- a/src/app/sidenavbar/sidenavbar.component.html
+++ b/src/app/sidenavbar/sidenavbar.component.html
@@ -24,7 +24,7 @@
             <button mat-menu-item [routerLink]="['/edit']" routerLinkActive="router-link-active" >Edit</button>
             <button mat-menu-item (click)="logout()">Logout</button>
         </mat-menu>
-        <img *ngIf="loggedIn()" src="{{ photoUrl}}" [matMenuTriggerFor]="menu" >
+        <img *ngIf="loggedIn()" src="{{ photoUrl || '../assets/img/user.jpg'}}" [matMenuTriggerFor]="menu" >
 
     </mat-toolbar-row>
 </mat-toolbar>
