--- a/src/app/edit-user/edit-user.component.html
+++ b/src/app/edit-user/edit-user.component.html
@@ -16,8 +16,8 @@
 
             <ul class="list-group">
                 <li class="list-group-item text-muted">Activity <i class="fa fa-dashboard fa-1x"></i></li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong>Last Active</strong></span> {{user.lastActive}}</li>
-                <li class="list-group-item text-right"><span class="pull-left"><strong>Account Created</strong></span> {{user.created}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong>Last Active</strong></span> {{user.lastActive | timeago:live}}</li>
+                <li class="list-group-item text-right"><span class="pull-left"><strong>Account Created</strong></span> {{user.created | date: 'medium'}}</li>
             </ul> 
 
         </div>
