--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,4 +1,3 @@
-
 <div class="login-wrapper" fxLayout="row" fxLayoutAlign="center center">
 
   <mat-card class="box">
@@ -6,17 +5,53 @@
       <mat-card-title>Log in</mat-card-title>
     </mat-card-header>
 
-    <form #loginForm="ngForm" class="example-form" (ngSubmit)="login()">
+    <form [formGroup]="loginForm" class="example-form" (ngSubmit)="login()">
       <mat-card-content>
-        <mat-form-field class="example-full-width">
+        <!-- <mat-form-field class="example-full-width">
           <input matInput required placeholder="Username" name=Name [(ngModel)]="model.Name" >
-        </mat-form-field>
+        </mat-form-field> -->
 
-        <mat-form-field class="example-full-width">
+        <p>
+          <mat-form-field appearance="fill" class="example-full-width ">
+            <mat-label>Name</mat-label>
+            <input matInput formControlName="name" placeholder="User name" required>
+
+            <mat-error align="end">
+              <div *ngIf="f.name.errors">
+                <span *ngIf="!f.name.valid && f.name.touched && f.name.errors.required"> Name
+                  <strong>required</strong> </span>
+              </div>
+            </mat-error>
+          </mat-form-field>
+        </p>
+        <!-- <mat-form-field class="example-full-width">
           <input required matInput placeholder="Password" name=Password [(ngModel)]="model.Password" >
-        </mat-form-field>
+        </mat-form-field> -->
+
+
+        <p>
+          <mat-form-field appearance="fill" class="example-full-width">
+            <mat-label>Enter your password</mat-label>
+            <input matInput formControlName="password" placeholder="Password"
+              [type]="hidepassword ? 'password' : 'text'" required>
+            <button mat-icon-button matSuffix (click)="hidepassword = !hidepassword" [attr.aria-label]="'Hide password'"
+              [attr.aria-pressed]="hidepassword">
+              <mat-icon>{{hidepassword ? 'visibility_off' : 'visibility'}}</mat-icon>
+            </button>
+            <mat-error align="end">
+              <div *ngIf="f.password.errors">
+                <span *ngIf="!f.password.valid && f.password.touched && f.password.errors.required"> password
+                  <strong>required</strong> </span>
+                <span
+                  *ngIf="!f.password.valid && f.password.touched && f.password.errors.minlength || f.password.errors.maxlength">
+                  Password must be between 4 to 8characters </span>
+              </div>
+            </mat-error>
+          </mat-form-field>
+        </p>
+
       </mat-card-content>
-      <button  mat-stroked-button color="accent"  type="submit" class="btn-block">Log in</button>
+      <button mat-stroked-button color="accent" type="submit" class="btn-block">Log in</button>
     </form>
   </mat-card>
 </div>
